Changelog
=========

2.2 (unreleased)
================

- Added upgrade steps for prenotazioni_folder [nicolasenno]
- Modified settimana_tipo colunms in prenotazioni_folder [nicolasenno]
- Added expiration field to IPrenotazione content type and created
  the upgrade step for its value [nicolasenno]
- Adding a type PrenotazioniWeek
- Adding a new week view
  [alert]


2.1 (2013-09-12)
================
- Fix cancel action on new booking [nicolasenno]
- Fix booking visualization issue on PM time [nicolasenno]
- Fix check booking not available [nicolasenno]
- Fix slot visualization for both anonymous and logged [nicolasenno]
- View for booking vacations supports also gateless bookings [alert]
- Implemented view for booking vacations [alert]
- Slot calculation made in prenotazioni state view [alert]
- Added parameter force_gate in booking creation [alert]
- Added utility time2timedelta [alert]
- Fix CSS table prenotazioni [nicolasenno]
- Hide refused review_state slots for anonymous users [alert]
- Fix review_state refused permissions [alert]
- Correctly take into account futureDays parameter [alert]
- Temporarily enabled actions menu [nicolasenno]
- Don't check overbooking in Prenotazione post_validate [alert]
- Fix the review_state after copy [alert]
- Added new workflow transition and its upgrade step [nicolasenno]
- Added fields validation (email, phone) for prenotazioni form [nicolasenno]
- Modified contentrules [nicolasenno]
- Modified workflow to add refused state [nicolasenno]
- We can add prenotazioni only through the calendar links [alert]
- Anonymous users can book again [alert]
- Autoinclude dependencies zcml [alert]
- Use captchas for anonymous users [alert]
- Upgrade step for installing `quintagroup.formlib.captcha`__ [alert]
- Removed customized createObject view [alert]
- We can now handle more than one gate [alert]
- Overbooking validation handled through an adapter [alert]
- Do not allow users to add stuff in the past [alert]
